<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:src="@drawable/ic_all_inclusive_black_24dp"
            android:padding="2sp"
            android:contentDescription="@string/app_name"/>


        <EditText
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:background="@drawable/bg_edittext"
            android:paddingStart="10dp"
            android:hint="@string/username"
            android:paddingEnd="10dp"
            android:textColorHint="@color/colorBlack"/>

        <EditText
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:padding="10dp"
            android:background="@drawable/bg_edittext"
            android:paddingStart="10dp"
            android:hint="@string/password"
            android:paddingEnd="10dp"
            android:inputType="textPassword"
            android:textColorHint="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvLogin"
            android:gravity="center"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bglogin"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"/>


        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/forgotPw"
            android:textColor="@color/colorBlack"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_height="40dp">

            <View
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="5dp"
                android:layout_height="0.5dp"
                android:background="#75000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="12sp"
                android:text="@string/or"/>

            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:visibility="visible"
                android:layout_height="0.5dp"
                android:layout_marginRight="16dp"
                android:background="#63000000"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyFb"
            android:layout_width="match_parent"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_height="40dp">

            <ImageView
                android:layout_marginLeft="20dp"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/logo_fb"/>


            <TextView
                android:id="@+id/tvFb"
                android:layout_marginLeft="7dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/log_in_with_facebook"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:textColor="@color/colorWhite"
        android:padding="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:background="@drawable/bg_down"
        android:layout_height="wrap_content"
        android:text="@string/dontHave"/>


</RelativeLayout>