<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg_login"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/tvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/colorBlack"
            android:padding="10dp"
            android:background="@drawable/bg_edittext"
            android:paddingStart="10dp"
            android:hint="@string/username"
            android:paddingEnd="10dp"
            android:textColorHint="@color/colorBlack"/>

        <EditText
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:padding="10dp"
            android:background="@drawable/bg_edittext"
            android:paddingStart="10dp"
            android:hint="@string/password"
            android:paddingEnd="10dp"
            android:inputType="textPassword"
            android:textColorHint="@color/colorBlack"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:gravity="center"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bglogin"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:text="@string/daftar"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"/>



    </LinearLayout>


</RelativeLayout>